vcs/specs/parser/fail/statements/nested_block_extra_close.vr
// @test: parse-fail
// @level: L0
// @tags: parser, statements, block, nested, extra, error
// @description: Test extra closing brace in nested block
// @expected-error: E011

fn test() {
    {
        let x = 5;
    }}
}
